--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@reduxjs/toolkit": "^1.9.0",
     "@sanity/block-content-to-react": "3.0.0",
     "@sanity/client": "3.4.1",
     "@sanity/image-url": "1.0.1",
@@ -18,7 +19,9 @@
     "next-sanity-image": "4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
