--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.3.1",
     "next-sanity-image": "4.1.0",
     "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
