--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@sanity/client": "3.4.1",
     "@sanity/image-url": "1.0.1",
     "next": "12.3.1",
+    "next-auth": "^4.17.0",
     "next-sanity-image": "4.1.0",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
