--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/image-url": "1.0.1",
     "next": "12.3.1",
     "next-auth": "^4.17.0",
+    "next-auth-sanity": "^1.4.4",
     "next-sanity-image": "4.1.0",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
