--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
