--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.17.0",
     "next-auth-sanity": "^1.4.4",
     "next-sanity-image": "4.1.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
