--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
