--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@reduxjs/toolkit": "^1.9.0",
-    "@sanity/block-content-to-react": "3.0.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "3.4.1",
     "@sanity/image-url": "1.0.1",
     "next": "12.3.1",
