--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "3.4.1",
     "@sanity/image-url": "1.0.1",
+    "@stripe/stripe-js": "^1.54.1",
     "next": "12.3.1",
     "next-auth": "^4.17.0",
-    "next-auth-sanity": "^1.4.4",
+    "next-auth-sanity": "^1.1.1",
     "next-sanity-image": "4.1.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
@@ -30,12 +31,13 @@
     "react-image-gallery": "^1.2.11",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "stripe": "^12.10.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint": "7.23.0",
+    "eslint-config-next": "^12.0.4",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
