--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sb": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -35,12 +37,21 @@
     "stripe": "^12.10.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.0.23",
+    "@storybook/addon-interactions": "7.0.23",
+    "@storybook/addon-links": "7.0.23",
+    "@storybook/blocks": "7.0.23",
+    "@storybook/nextjs": "7.0.23",
+    "@storybook/react": "7.0.23",
+    "@storybook/testing-library": "0.0.14-next.2",
     "autoprefixer": "^10.4.12",
     "eslint": "7.23.0",
     "eslint-config-next": "^12.0.4",
+    "eslint-plugin-storybook": "^0.6.12",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "storybook": "7.0.23",
     "tailwindcss": "^3.2.1"
   }
 }
